# sonic-ucse

./: .gitignore  .gitmodules  Cargo.toml  README.md  bench.sh
bench/: graphs.ipynb
examples/: bb-lamassu.rs  lamassu.rs  paper.rs  sha256.rs  sonic.rs  ucse-test.rs  ucse.rs
src/: batch.rs  dlog.rs  kupke.rs  lib.rs  protocol.rs  schnorrots.rs  srs.rs  synthesis.rs  usig.rs  util.rs
src/circuits/: adaptor.rs  mod.rs  pedersen.rs  sha256.rs
tests/: dlog.rs  sha256.py  sonic.rs  srs.rs  uc-se.rs  util.rs
