[package]
name = "sonic-ucse"
version = "0.1.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Noemi Glaeser <nglaeser@umd.edu>",
    ]
edition = "2018"

[dependencies.pairing]
version = "0.14"
features = ["u128-support"]

[dependencies]
merlin = "3"
rand = "0.8.5"
rand_core = "0.6"
bellman = "0.1.0"
ring = "0.16.15"
curv-kzen = "0.9.0"
byteorder = "1.4.3"
dusk-jubjub = "0.10"
dusk-bls12_381 = "0.10.0"
dusk-pki = "0.8.0"
dusk-poseidon = "0.22.0"
dusk-bytes = "0.1.5"
schnorrkel = { version = "0.10", features = ["avx2_backend", "asm"] }

[dependencies.sapling-crypto]
git = "https://github.com/nglaeser/sapling-crypto"
rev = "40d7594c48b6480f717ef714b4d439a36516a54b"

[dependencies.starsig]
git = "https://github.com/nglaeser/starsig"

[dependencies.jubjub-elgamal]
package = "elgamal"
git = "https://github.com/nglaeser/jubjub-elgamal"

[dependencies.jubjub-schnorr]
package = "dusk-schnorr"
git = "https://github.com/nglaeser/jubjub-schnorr"

[dependencies.curve25519-dalek]
git = "https://github.com/nglaeser/curve25519-dalek"
branch = "release/3.2"